--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -109,7 +109,7 @@ navbar:
     menu:
         Home: /
         Archives: /archives
-        Categories: /categories
+#        Categories: /categories
         Tags: /tags
     # Links to be shown on the right of the navigation bar
     links:
