--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -5,7 +5,7 @@ variant: default
 # Path or URL to the website's logo
 # logo: /img/logo.svg
 logo:
-    text: 紳士淑女の社交場
+    text: 不明瞭な存在意義
 # Page metadata configurations
 head:
     # URL or path to the website's icon
