--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "version": "6.3.0"
   },
   "dependencies": {
-    "bulma-stylus": "^0.8.0",
     "hexo": "^6.3.0",
     "hexo-deployer-git": "^4.0.0",
     "hexo-generator-archive": "^2.0.0",
@@ -20,9 +19,9 @@
     "hexo-generator-index": "^3.0.0",
     "hexo-generator-tag": "^2.0.0",
     "hexo-renderer-ejs": "^2.0.0",
-    "hexo-renderer-inferno": "^0.1.3",
     "hexo-renderer-marked": "^6.0.0",
     "hexo-renderer-stylus": "^3.0.0",
-    "hexo-server": "^3.0.0"
+    "hexo-server": "^3.0.0",
+    "hexo-theme-icarus": "file:./themes/icarus"
   }
 }
