サイト設定を更新

--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 # Site
 title: 不明瞭な存在意義
-subtitle: ''
-description: ''
+subtitle: 'Chaotic Notes'
+description: 'ジャンル問わず何でも書き綴るブログ'
 keywords:
 author: Hiroki Sugawara
 language: ja
