--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -116,7 +116,7 @@ navbar:
 # Page footer configurations
 footer:
     # Copyright text
-    copyright: © 2023
+    copyright: © 2023 Chaotic Notes
     # Links to be shown on the right of the footer section
     links:
         Creative Commons:
