--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: 'Japan'
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: https://h-sugawara.github.io/
+url: https://blog.chaotic-notes.com/
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
