--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "hexo-renderer-marked": "^6.0.0",
     "hexo-renderer-stylus": "^3.0.0",
     "hexo-server": "^3.0.0",
-    "hexo-theme-icarus": "file:./themes/icarus",
-    "open-graph-scraper": "^6.3.2"
+    "hexo-tag-ogp-link-preview": "^1.0.0",
+    "hexo-theme-icarus": "file:./themes/icarus"
   }
 }
