--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -294,7 +294,7 @@ plugins:
     # https://analytics.google.com
     google_analytics:
         # Google Analytics tracking ID
-        tracking_id:
+        tracking_id: G-Y6JC5TBHLG
     # Hotjar user feedback plugin
     # https://www.hotjar.com/
     hotjar:
