sitemap.xmlの生成処理を追加

--- a/_config.yml
+++ b/_config.yml
@@ -111,3 +111,8 @@ link_preview:
   class_name:
     anchor_link: link-muted link-preview
     image: not-gallery-item
+
+# Sitemap
+sitemap:
+  tags: true
+  categories: true
