--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -224,7 +224,7 @@ widgets:
         # Whether to show the index of each heading
         index: true
         # Whether to collapse sub-headings when they are out-of-view
-        collapsed: false
+        collapsed: true
         # Maximum level of headings to show (1-6)
         depth: 4
     # Categories widget configurations
