--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone: Japan
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
 url: https://blog.chaotic-notes.com/
-permalink: :year/:month/:day/:title/
+permalink: /articles/:title/
 permalink_defaults:
 pretty_urls:
   trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
@@ -85,7 +85,7 @@ updated_option: 'mtime'
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 10
+per_page: 5
 pagination_dir: page
 
 # Include / Exclude file(s)
@@ -114,5 +114,7 @@ link_preview:
 
 # Sitemap
 sitemap:
-  tags: true
-  categories: true
+  path:
+    - sitemap.xml
+  tags: false
+  categories: false
