--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -247,9 +247,9 @@ widgets:
         position: right
         type: tags
         # How to order tags. For example 'name' to order by name in ascending order, and '-length' to order by number of posts in each tags in descending order
-        order_by: name
+        order_by: -length
         # Amount of tags to show. Will show all if not set.
-        amount: 10
+        amount: 20
         # Whether to show tags count, i.e. number of posts in the tag.
         show_count: true
     # Profile widget configurations
