--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: Chaotic Notes
 subtitle: 不明瞭な存在意義
-description: ジャンル問わず何でも書き綴るブログ
+description: 美少女ゲームレビューや技術記事を始め、ジャンルを問わず何でも書き綴ろうとしているブログ
 keywords:
 author: Hiroki Sugawara
 language: ja
@@ -85,7 +85,7 @@ updated_option: 'mtime'
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 5
+per_page: 10
 pagination_dir: page
 
 # Include / Exclude file(s)
