--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -335,42 +335,42 @@ widgets:
 # https://ppoffice.github.io/hexo-theme-icarus/categories/Plugins/
 plugins:
     # Enable page startup animations
-    animejs: true
+    animejs: false
     # Show the "back to top" button
     back_to_top: true
     # Baidu Analytics plugin settings
     # https://tongji.baidu.com
-    baidu_analytics:
+#    baidu_analytics:
         # Baidu Analytics tracking ID
-        tracking_id:
+#        tracking_id:
     # Bing Webmaster Tools plugin settings
     # https://www.bing.com/toolbox/webmaster/
-    bing_webmaster:
+#    bing_webmaster:
         # Bing Webmaster Tools tracking ID in the <meta> tag
-        tracking_id:
+#        tracking_id:
     # BuSuanZi site/page view counter
     # https://busuanzi.ibruce.info
     busuanzi: false
     # CNZZ statistics
     # https://www.umeng.com/web
-    cnzz:
+#    cnzz:
         # CNZZ tracker id
-        id:
+#        id:
         # CNZZ website id
-        web_id:
+#        web_id:
     # Alerting users about the use of cookies
     # https://www.osano.com/cookieconsent/
-    cookie_consent:
+#    cookie_consent:
         # The compliance type. Can be "info", "opt-in", or "opt-out"
-        type: info
+#        type: info
         # Theme of the popup. Can be "block", "edgeless", or "classic"
-        theme: edgeless
+#        theme: classic
         # Whether the popup should stay static regardless of the page scrolls
-        static: false
+#        static: false
         # Where on the screen the consent popup should display
-        position: bottom-left
+#        position: bottom-left
         # URL to your site's cookie policy
-        policyLink: https://www.cookiesandyou.com/
+#        policyLink: https://www.cookiesandyou.com/
     # Enable the lightGallery and Justified Gallery plugins
     gallery: true
     # Google Analytics plugin settings
@@ -380,9 +380,9 @@ plugins:
         tracking_id: G-Y6JC5TBHLG
     # Hotjar user feedback plugin
     # https://www.hotjar.com/
-    hotjar:
+#    hotjar:
         # Hotjar site id
-        site_id:
+#        site_id:
     # Enable the KaTeX math typesetting support
     # https://katex.org/
     katex: false
@@ -396,16 +396,16 @@ plugins:
     progressbar: true
     # Statcounter statistics
     # https://statcounter.com/
-    statcounter:
+#    statcounter:
         # Statcounter project id
-        project:
+#        project:
         # Statcounter project security code
-        security:
+#        security:
     # Twitter conversion tracking plugin settings
     # https://business.twitter.com/en/help/campaign-measurement-and-analytics/conversion-tracking-for-websites.html
-    twitter_conversion_tracking:
+#    twitter_conversion_tracking:
         # Twitter Pixel ID
-        pixel_id:
+#        pixel_id:
 # CDN provider settings
 # https://ppoffice.github.io/hexo-theme-icarus/Configuration/Theme/speed-up-your-site-with-custom-cdn/
 providers:
