記事ライセンスのアイコン配置方法を変更

--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -144,14 +144,11 @@ article:
     update_time: auto
     # Article licensing block
     licenses:
-        Creative Commons:
-            icon: fab fa-creative-commons
-            url: https://creativecommons.org/
-        Attribution:
-            icon: fab fa-creative-commons-by
-            url: https://creativecommons.org/licenses/by/4.0/
-        Noncommercial:
-            icon: fab fa-creative-commons-nc
+        CC BY-NC 4.0:
+            icon:
+                - fab fa-creative-commons
+                - fab fa-creative-commons-by
+                - fab fa-creative-commons-nc
             url: https://creativecommons.org/licenses/by-nc/4.0/
 # Search plugin configurations
 # https://ppoffice.github.io/hexo-theme-icarus/categories/Plugins/Search/
