--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -238,6 +238,8 @@ widgets:
         # Where should the widget be placed, left sidebar or right sidebar
         position: right
         type: categories
+        orderBy: length
+        order: -1
     # Tags widget configurations
     -
         # Where should the widget be placed, left sidebar or right sidebar
