--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -122,11 +122,14 @@ footer:
     # Links to be shown on the right of the footer section
     links:
         Creative Commons:
-            icon: fab fa-creative-commons
+            icon: fa-creative-commons
             url: https://creativecommons.org/
         Attribution 4.0 International:
-            icon: fab fa-creative-commons-by
+            icon: fa-creative-commons-by
             url: https://creativecommons.org/licenses/by/4.0/
+        Noncommercial:
+            icon: fa-creative-commons-nc
+            url: https://creativecommons.org/licenses/by-nc/4.0/
 # Article related configurations
 article:
     # Code highlight settings
@@ -146,9 +149,9 @@ article:
     licenses:
         CC BY-NC 4.0:
             icon:
-                - fab fa-creative-commons
-                - fab fa-creative-commons-by
-                - fab fa-creative-commons-nc
+                - fa-creative-commons
+                - fa-creative-commons-by
+                - fa-creative-commons-nc
             url: https://creativecommons.org/licenses/by-nc/4.0/
 # Search plugin configurations
 # https://ppoffice.github.io/hexo-theme-icarus/categories/Plugins/Search/
