.nojekyllファイルがデプロイされるように変更

--- a/_config.yml
+++ b/_config.yml
@@ -91,6 +91,7 @@ pagination_dir: page
 # Include / Exclude file(s)
 ## include:/exclude: options only apply to the 'source/' folder
 include:
+  - '.nojekyll'
 exclude:
 ignore:
 
@@ -105,6 +106,8 @@ deploy:
   type: git
   repo: https://github.com/h-sugawara/h-sugawara.github.io
   branch: gh-pages
+  ignore_hidden:
+    public: false
 
 # Link Preview
 link_preview:
