サイト内検索に固定ページを含まないようにする

--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -158,7 +158,7 @@ article:
 search:
     type: insight
     # Whether to include pages in the search results
-    index_pages: true
+    index_pages: false
 # Comment plugin configurations
 # https://ppoffice.github.io/hexo-theme-icarus/categories/Plugins/Comment/
 #comment:
