--- a/_config.yml
+++ b/_config.yml
@@ -94,6 +94,8 @@ include:
   - '.nojekyll'
 exclude:
 ignore:
+  - '**/themes/icarus/source/css/default-backup.styl'
+  - '**/themes/icarus/source/css/cyberpunk.styl'
 
 # Extensions
 ## Plugins: https://hexo.io/plugins/
