サイト内リンクでリダイレクトが発生しないように修正

--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -106,10 +106,10 @@ navbar:
     # Navigation menu items
     menu:
         Home: /
-        Archives: /archives
-#        Categories: /categories
-        Tags: /tags
-        About: /about
+        Archives: /archives/
+#        Categories: /categories/
+        Tags: /tags/
+        About: /about/
     # Links to be shown on the right of the navigation bar
     links:
 #        Download on GitHub:
