--- a/_config.yml
+++ b/_config.yml
@@ -48,8 +48,8 @@ highlight:
   line_number: false
   auto_detect: false
   tab_replace: ''
-  wrap: true
-  hljs: false
+  wrap: false
+  hljs: true
 prismjs:
   enable: false
   preprocess: true
