--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -15,25 +15,25 @@ head:
         name:
         # The displayed name of the web application
         # when there is not enough space to display full name
-        short_name:
+#        short_name:
         # The start URL of the web application
-        start_url:
+        start_url: .
         # The default theme color for the application
-        theme_color:
+        theme_color: white
         # A placeholder background color for the application page to display
         # before its stylesheet is loaded
-        background_color:
+        background_color: white
         # The preferred display mode for the website
         display: standalone
         # Image files that can serve as application icons for different contexts
         icons:
             -
                 # The path to the image file
-                src: ''
+                src: 'img/favicon.ico'
                 # A string containing space-separated image dimensions
-                sizes: ''
+                sizes: '16x16 24x24 32x32 48x48'
                 # A hint as to the media type of the image
-                type:
+                type: 'image/vnd.microsoft.icon'
     # Open Graph metadata
     # https://hexo.io/docs/helpers.html#open-graph
     open_graph:
