--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "hexo-generator-index": "^3.0.0",
     "hexo-generator-sitemap": "^3.0.1",
     "hexo-generator-tag": "^2.0.0",
+    "hexo-html-minifier": "^1.0.0",
     "hexo-renderer-ejs": "^2.0.0",
-    "hexo-renderer-marked": "^6.2.0",
+    "hexo-renderer-markdown-it": "^7.1.1",
     "hexo-renderer-stylus": "^3.0.0",
     "hexo-server": "^3.0.0",
     "hexo-tag-ogp-link-preview": "^1.1.0",
-    "hexo-theme-icarus": "file:./themes/icarus"
+    "hexo-theme-icarus": "file:./themes/icarus",
+    "hexo-uglify": "^2.0.0"
   }
 }
