--- a/themes/icarus/.eslintrc.json
+++ b/themes/icarus/.eslintrc.json
@@ -45,6 +45,10 @@
         "functions": "never"
       }
     ],
+    "object-curly-spacing": [
+      "error",
+      "always"
+    ],
     "array-bracket-spacing": [
       "error",
       "never",
