--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "hexo-server": "^3.0.0",
     "hexo-tag-ogp-link-preview": "^1.1.1",
     "hexo-theme-icarus": "file:./themes/icarus",
-    "hexo-uglify": "^2.0.0"
+    "hexo-uglify": "^2.0.0",
+    "markdown-it-multimd-table": "^4.2.3"
   }
 }
