--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,7 @@ category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
 skip_render:
+  - 'google413577fe162858a9.html'
 
 # Writing
 new_post_name: :year/:month/:day_:title.md # File name of new posts
