フォント用CDNを利用しない場合に無効なタグが出力される不具合を修正

--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -421,6 +421,6 @@ providers:
     # Name or URL template of the JavaScript and/or stylesheet CDN provider
     cdn: unpkg
     # Name or URL template of the webfont CDN provider
-    fontcdn: google
+    fontcdn: ''
     # Name or URL of the fontawesome icon font CDN provider
     iconcdn: https://cdnjs.loli.net/ajax/libs/font-awesome/6.5.1/css/all.min.css
