--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -105,7 +105,7 @@ head:
     meta:
         # Meta tag specified in <attribute>=<value> style
         # E.g., name=theme-color;content=#123456 => <meta name="theme-color" content="#123456">
-        - 'name="google-site-verification";content="b_zdKwaU8LwSsKciBy8qWPemm_p7EbEvxprI4PiNois"'
+        #- 'name="google-site-verification";content="b_zdKwaU8LwSsKciBy8qWPemm_p7EbEvxprI4PiNois"'
     # URL or path to the website's RSS atom.xml
     rss:
 # Page top navigation bar configurations
