--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -235,7 +235,7 @@ widgets:
         # Whether to show the index of each heading
         index: true
         # Whether to collapse sub-headings when they are out-of-view
-        collapsed: true
+        collapsed: false
         # Maximum level of headings to show (1-6)
         depth: 2
     # Recent posts widget configurations
